# orbit

./: .gitignore  .gitmodules  .travis.yml  1.sam  BAMfunctions.cpp  BAMoutput.cpp  Cargo.toml  ChimericAlign.h  ChimericDetection.cpp  ChimericDetection.h  ErrorWarning.cpp  Genome.cpp  Genome.h  GlobalVariables.cpp  InOutStreams.h  LICENSE  Makefile  OutSJ.cpp  OutSJ.h  ParameterInfo.h  Parameters.cpp  README.md  ReadAlign.cpp  ReadAlign.h  ReadAlignChunk.cpp  ReadAlignChunk.h  ReadAlign_alignBAM.cpp  ReadAlign_assignAlignToWindow.cpp  ReadAlign_chimericDetectionOldOutput.cpp  ReadAlign_createExtendWindowsWithAlign.cpp  ReadAlign_mapOneRead.cpp  ReadAlign_oneRead.cpp  ReadAlign_outputAlignments.cpp  ReadAlign_outputTranscriptSAM.cpp  ReadAlign_peOverlapMergeMap.cpp  ReadAlign_quantTranscriptome.cpp  ReadAlign_stitchPieces.cpp  STAR.cpp  SoloReadBarcode.cpp  SoloReadFeature_inputRecords.cpp  (+20 more)
.github/: dependabot.yml
.github/workflows/: test-orbit.yml  test.yml
htslib/: sam.c
src/: bindings.rs  lib.rs
star-sys/: Cargo.toml  build.rs
star-sys/STAR/: CMakeLists.txt  main.cpp
star-sys/STAR/source/: 1.fastq  BAMfunctions.cpp  BAMoutput.cpp  CMakeLists.txt  ChimericAlign.cpp  ChimericAlign.h  ChimericAlign_chimericJunctionOutput.cpp  ChimericAlign_chimericStitching.cpp  ChimericDetection.h  ChimericSegment.cpp  ChimericSegment.h  ErrorWarning.cpp  ErrorWarning.h  Genome.cpp  Genome.h  Genome_genomeGenerate.cpp  GlobalVariables.h  InOutStreams.h  IncludeDefine.h  Makefile  MmapArray.cpp  MmapArray.h  OutSJ.h  PackedArray.h  ParameterInfo.h  Parameters.cpp  Parameters.h  ParametersChimeric_initialize.cpp  ParametersSolo.cpp  ParametersSolo.h  ReadAlign.cpp  ReadAlign.h  ReadAlignChunk.cpp  ReadAlignChunk.h  ReadAlign_CIGAR.cpp  ReadAlign_alignBAM.cpp  ReadAlign_assignAlignToWindow.cpp  ReadAlign_calcCIGAR.cpp  ReadAlign_chimericDetection.cpp  ReadAlign_chimericDetectionOld.cpp  (+58 more)
star-sys/STAR/source/htslib/: sam.c
star-sys/src/: lib.rs
test/: full1_sample.bam  test_ercc_reads.fastq
