[package]
name = "orbit"
version = "0.2.0"
authors = ["mkirsche", "Lance Hepler <lance.hepler@10xgenomics.com>", "Patrick Marks <patrick@10xgenomics.com>"]
edition = "2018"

[workspace]

[dependencies]
failure = "*"
libc = "0.2"
rust-htslib = { git="https://github.com/rust-bio/rust-htslib", rev="b32c9130a5fc22845d41e9ea6e971e53f6310b02", default-features = false, features = ["serde_feature"] }
star-sys = { version = "0.2", path = "star-sys" }

[profile.release]
debug = 1
