[package]
name = "orbit"
version = "0.2.0"
authors = ["mkirsche", "Lance Hepler <lance.hepler@10xgenomics.com>", "Patrick Marks <patrick@10xgenomics.com>"]
edition = "2018"
license = "MIT"

[workspace]

[dependencies]
anyhow = "1"
libc = "0.2"
rust-htslib = { version = "0.38.2", default-features = false, features = ["serde_feature", "libdeflate"] }
star-sys = { version = "0.2", path = "star-sys" }

[profile.release]
debug = 1
