[package]
name = "orbit"
version = "0.2.1"
authors = ["mkirsche", "Lance Hepler <lance.hepler@10xgenomics.com>", "Patrick Marks <patrick@10xgenomics.com>"]
edition = "2018"
license = "MIT"
include = ["wrapper.h", "src/lib.rs", "LICENSE", "README.md"]

[workspace]

[dependencies]
anyhow = "1"
libc = "0.2"
star-sys = { version = "0.2", path = "star-sys" }

[dependencies.rust-htslib]
version = "1"
default-features = false
features = ["serde_feature"]

[profile.release]
debug = 1
