set(SOURCES
        orbit.cpp
        InOutStreams.cpp
        Parameters.cpp
        ParametersSolo.cpp
        ParametersChimeric_initialize.cpp
        PackedArray.cpp
        SequenceFuns.cpp
        Genome.cpp
        Genome_insertSequences.cpp
        Genome_genomeGenerate.cpp
        streamFuns.cpp
        genomeScanFastaFiles.cpp
        TimeFunctions.cpp
        insertSeqSA.cpp
        ReadAlign.cpp
        Transcript.cpp
        Transcriptome_quantAlign.cpp
        funCompareUintAndSuffixesMemcmp.cpp
        genomeSAindex.cpp
        ReadAlign_outputAlignments.cpp
        ReadAlign_outputTranscriptSAM.cpp
        ReadAlign_quantTranscriptome.cpp
        ReadAlign_calcCIGAR.cpp
        ReadAlign_storeAligns.cpp
        SuffixArrayFuns.cpp
        ReadAlign_oneRead.cpp
        ReadAlign_mapOneRead.cpp
        ReadAlign_stitchPieces.cpp
        ReadAlign_mappedFilter.cpp
        ReadAlign_maxMappableLength2strands.cpp
        ReadAlign_assignAlignToWindow.cpp
        ReadAlign_createExtendWindowsWithAlign.cpp
        ReadAlign_multMapSelect.cpp
        readLoad.cpp
        stitchWindowAligns.cpp
        extendAlign.cpp
        binarySearch2.cpp
        blocksOverlap.cpp
        stitchAlignToTranscript.cpp
        ErrorWarning.cpp
        )
add_library(orbit ${SOURCES})